--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="login_form_container">
@@ -46,6 +46,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="login.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
